--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -44,10 +44,12 @@
     {{ partial "header.html" . }}
 
     <main
-      class="prose prose-neutral relative mx-auto min-h-[calc(100vh-9rem)] max-w-[--w] px-8 pb-16 pt-14 dark:prose-invert"
+      class="prose prose-neutral relative mx-auto min-h-[calc(100vh-9rem)]  px-8 pb-16 pt-14 dark:prose-invert"
     >
       {{ block "main" . }}{{ end }}
     </main>
+
+    <aside class="">{{ partial "sidebar.html" . }}</aside>
 
     {{ partial "footer.html" . }}
   </body>
